# QRcoder

./: Binarizer.cpp  Binarizer.h  BitMatrix.cpp  BitMatrix.h  CMakeLists.txt  DataBlock.cpp  DataBlock.h  Decoder.cpp  Decoder.hpp  Detector.cpp  Detector.h  Detector.hpp  DetectorResult.cpp  DetectorResult.h  Finder.cpp  Finder.hpp  FinderPoint.cpp  FinderPoint.hpp  FinderResult.cpp  FinderResult.hpp  FormatInfo.cpp  FormatInfo.h  QRcodeReader.cpp  QRcodeReader.h  Version.cpp  Version.h  main.cpp
Decoder/: DataBlock.cpp  DataBlock.h  Decoder.cpp  Decoder.hpp  DecoderResult.cpp  DecoderResult.h  FormatInfo.cpp  FormatInfo.h
Detector/: Detector.cpp  Detector.h  DetectorResult.cpp  DetectorResult.h  Finder.cpp  FinderPoint.hpp  FinderResult.cpp  FinderResult.hpp
